parent f1cf69dcec12615a68a9c5351998866c3b9fbe9e author xiaolei.zl <xiaolei.zl@alibaba-inc.com> 1715237940 +0000 committer 霄磊 <xiaolei.zl@alibaba-inc.com> 1718701299 +0800
introduce proxy_server

minor

code refactor

refine proxy server

todo: bind to pvc and deploy on internal

try to test on internal

modify dockerfile

able to launch, todo: fix graph creation and loading

minor fix

add log

fix codegen error

minor

introduce proxy_server

minor

code refactor

refine proxy server

todo: bind to pvc and deploy on internal

try to test on internal

modify dockerfile

able to launch, todo: fix graph creation and loading

minor fix

add log

minor

update memory request

add test script

increase memroy request

update docker file for debug

update dns config

add debug tools in dockerfile

use nodePort for secondary

use 7brs

add role binding

install kubectl to get svc ip

minor

debuging host connection

edit

add script

minor

edit

--- a/.github/workflows/interactive.yml
+++ b/.github/workflows/interactive.yml
@@ -167,6 +167,20 @@ jobs:
         sed -i 's/default_graph: modern_graph/default_graph: ldbc/g' ./engine_config_test.yaml
         sed -i 's/temp_workspace/interactive_workspace/g' ./engine_config_test.yaml
 
+    - name: Proxy Server test
+      env:
+        INTERACTIVE_WORKSPACE: /tmp/interactive_workspace
+      run: |
+        cd ${GITHUB_WORKSPACE}/flex/tests/hqps
+        bash hqps_proxy_server_test.sh ${INTERACTIVE_WORKSPACE} ./engine_config_test.yaml
+
+    - name: Proxy Server test
+      env:
+        INTERACTIVE_WORKSPACE: /tmp/interactive_workspace
+      run: |
+        cd ${GITHUB_WORKSPACE}/flex/tests/hqps
+        bash hqps_proxy_server_test.sh ${INTERACTIVE_WORKSPACE} ./engine_config_test.yaml
+
     - name: Sample Query test
       env:
         GS_TEST_DIR: ${{ github.workspace }}/gstest
