--- a/interactive_engine/benchmark/config/interactive-benchmark.properties
+++ b/interactive_engine/benchmark/config/interactive-benchmark.properties
@@ -1,5 +1,6 @@
 # gremlin server endpoint
-endpoint=127.0.0.1:8182
+gremlin.endpoint=127.0.0.1:8182
+cypher.endpoint=127.0.0.1:7687
 # the number of threads sending queries
 thread_count=1
 # the number of warmup queries each kind of query
