--- a/interactive_engine/benchmark/pom.xml
+++ b/interactive_engine/benchmark/pom.xml
@@ -14,6 +14,11 @@
             <artifactId>gremlin-driver</artifactId>
             <version>3.5.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.neo4j.driver</groupId>
+            <artifactId>neo4j-java-driver</artifactId>
+            <version>4.4.0</version>
+        </dependency>
     </dependencies>
 
     <build>
