wip: add cypher benchmark tool
Committed-by: bingqing.lbq from Dev container

--- a/interactive_engine/benchmark/config/interactive-benchmark.properties
+++ b/interactive_engine/benchmark/config/interactive-benchmark.properties
@@ -1,14 +1,17 @@
 # gremlin server endpoint
-gremlin.endpoint=127.0.0.1:8182
-cypher.endpoint=127.0.0.1:7687
+gremlin.endpoint=127.0.0.1:8183
+# cypher server endpoint
+cypher.endpoint=127.0.0.1:7689
+# query suffix, e.g., .cypher, .gremlin
+query.suffix=cypher
 # the number of threads sending queries
 thread_count=1
 # the number of warmup queries each kind of query
 warmup.every.query=0
 # the number of queries sending by each thread
-operation.count.every.query=11
+operation.count.every.query=1
 # the directory of query templates
-queryDir=./queries/bi/
+queryDir=./queries/cypher_queries
 # the director of query parameters
 interactive.parameters.dir=./data/substitution_parameters/
 
@@ -33,20 +36,20 @@ ldbc_query_12.enable=false
 
 # ldbc bi queries
 bi_query_1.enable=false
-bi_query_2.enable=true
-bi_query_3.enable=true
+bi_query_2.enable=false
+bi_query_3.enable=false
 bi_query_4.enable=false
-bi_query_5.enable=true
-bi_query_6.enable=true
-bi_query_7.enable=true
-bi_query_8.enable=true
-bi_query_9.enable=true
-bi_query_11.enable=true
-bi_query_12.enable=true
+bi_query_5.enable=false
+bi_query_6.enable=false
+bi_query_7.enable=false
+bi_query_8.enable=false
+bi_query_9.enable=false
+bi_query_11.enable=false
+bi_query_12.enable=false
 bi_query_13.enable=false
-bi_query_14.enable=true
+bi_query_14.enable=false
 bi_query_17.enable=false
-bi_query_18.enable=true
+bi_query_18.enable=false
 
 # ldbc lsqb queries
 lsqb_query_1.enable=false
@@ -71,7 +74,7 @@ early_stop_query.enable=false
 subtask_query.enable=false
 
 # custom queries without parameters
-custom_constant_query_1.enable=false
+custom_constant_query_1.enable=true
 custom_constant_query_2.enable=false
 
 # custom queries
