--- a/coordinator/requirements.txt
+++ b/coordinator/requirements.txt
@@ -17,7 +17,7 @@ Flask == 2.2.5
 urllib3 >= 1.25.3, < 2.1.0
 pydantic >= 2
 typing-extensions >= 4.7.1
-click
+click >= 8.1.7
 psutil
 schedule
 interactive-sdk == 0.0.3
