--- a/flex/interactive/sdk/examples/java/interactive-sdk-example/pom.xml
+++ b/flex/interactive/sdk/examples/java/interactive-sdk-example/pom.xml
@@ -22,7 +22,7 @@
   <dependencies>
     <dependency>
       <groupId>com.alibaba.graphscope</groupId>
-      <artifactId>interactive-java-sdk</artifactId>
+      <artifactId>interactive-sdk</artifactId>
       <version>0.0.3</version>
     </dependency>
   </dependencies>
