upgrade arrow to 15.0.2

--- a/flex/CMakeLists.txt
+++ b/flex/CMakeLists.txt
@@ -121,6 +121,27 @@ find_package(Boost REQUIRED COMPONENTS system filesystem
              context program_options regex thread date_time)
 add_definitions("-DBOOST_BIND_GLOBAL_PLACEHOLDERS")
 
+include("cmake/FindBrotliAlt.cmake")
+if (NOT BrotliAlt_FOUND)
+    message(FATAL_ERROR "brotli not found, please install the brotli library")
+else ()
+    include_directories(SYSTEM ${BrotliAlt_INCLUDE_DIRS})
+endif()
+
+include("cmake/Findutf8proc.cmake")
+if (NOT utf8proc_FOUND)
+    message(FATAL_ERROR "utf8proc not found, please install the utf8proc library")
+else ()
+    include_directories(SYSTEM ${utf8proc_INCLUDE_DIRS})
+endif ()
+
+include("cmake/FindzstdAlt.cmake")
+if (NOT zstdAlt_FOUND)
+    message(FATAL_ERROR "zstd not found, please install the zstd library")
+else ()
+    include_directories(SYSTEM ${zstdAlt_INCLUDE_DIRS})
+endif ()
+
 #find arrow----------------------------------------------------------------------
 include("cmake/FindArrow.cmake")
 if (NOT ARROW_FOUND)
