minor refine the configs

--- a/charts/graphscope-store/templates/configmap.yaml
+++ b/charts/graphscope-store/templates/configmap.yaml
@@ -60,6 +60,7 @@ data:
     neo4j.bolt.server.disabled=true
   
     ## GOpt config
+    graph.planner.is.on={{ .Values.graphPlannerIsOn }}
     graph.planner.opt={{ .Values.graphPlannerOpt }}
     graph.planner.rules={{ .Values.graphPlannerRules }}
     graph.physical.opt={{ .Values.graphPhysicalOpt }}
