fix(interactive): update the integration tests in GOpt-based compilation (#3786)
#3736

Co-authored-by: 霄磊 <xiaolei.zl@alibaba-inc.com>

--- a/interactive_engine/compiler/Makefile
+++ b/interactive_engine/compiler/Makefile
@@ -84,6 +84,9 @@ ldbc_test:
 	# mvn test -Dtest=com.alibaba.graphscope.gremlin.integration.ldbc.IrLdbcTest
 	mvn test -Dtest=com.alibaba.graphscope.cypher.integration.ldbc.IrLdbcTest
 
+simple_test:
+	mvn test -Dtest=com.alibaba.graphscope.cypher.integration.ldbc.SimpleMatchTest
+
 # start rpc server
 # make run graph.schema:=../executor/ir/core/resource/ldbc_schema.json
 pattern_test:
