CI: Auto release gsctl wheel package and Interactive image

--- a/.github/workflows/flex-interactive-dummy.yml
+++ b/.github/workflows/flex-interactive-dummy.yml
@@ -7,6 +7,8 @@ on:
     paths:
       - '**'
       - '!flex/**'
+      - '!coordinator/gscoordinator/flex/**'
+      - '!python/graphscope/gsctl/**'
       - '!.github/workflows/flex-interactive.yml'
 
 concurrency:
