--- a/flex/CMakeLists.txt
+++ b/flex/CMakeLists.txt
@@ -121,30 +121,11 @@ find_package(Boost REQUIRED COMPONENTS system filesystem
              context program_options regex thread date_time)
 add_definitions("-DBOOST_BIND_GLOBAL_PLACEHOLDERS")
 
-########## BrotliAlt, utf8proc, zstdAlt ##########
-# These third-party dependenices are actually not used in Flex, but included here 
-# to avoid cmake problems.
-include("cmake/FindBrotliAlt.cmake")
-if (NOT BrotliAlt_FOUND)
-    message(FATAL_ERROR "brotli not found, proceed without brotli")
-endif()
-
-include("cmake/Findutf8proc.cmake")
-if (NOT utf8proc_FOUND)
-    message(FATAL_ERROR "utf8proc not found, proceed without utf8proc")
-endif ()
-
-include("cmake/FindzstdAlt.cmake")
-if (NOT zstdAlt_FOUND)
-    message(STATUS "zstd not found, proceed without zstd")
-endif ()
-
-#find arrow----------------------------------------------------------------------
-include("cmake/FindArrow.cmake")
-if (NOT ARROW_FOUND)
+find_package(Arrow REQUIRED)
+if (NOT Arrow_FOUND)
     message(FATAL_ERROR "arrow not found, please install the arrow library")
 else ()
-    include_directories(SYSTEM ${ARROW_INCLUDE_DIRS})
+    include_directories(SYSTEM ${Arrow_INCLUDE_DIRS})
     if (TARGET arrow_shared)
         set(ARROW_SHARED_LIB arrow_shared)
     endif()
