--- a/flex/engines/graph_db/grin/CMakeLists.txt
+++ b/flex/engines/graph_db/grin/CMakeLists.txt
@@ -34,11 +34,11 @@ if (GLOG_FOUND)
 endif ()
 
 #find arrow----------------------------------------------------------------------
-include("../../../../flex/cmake/FindArrow.cmake")
-if (NOT ARROW_FOUND)
+find_package(Arrow REQUIRED)
+if (NOT Arrow_FOUND)
     message(FATAL_ERROR "arrow not found, please install the arrow library")
 else ()
-    include_directories(SYSTEM ${ARROW_INCLUDE_DIRS})
+    include_directories(SYSTEM ${ARROW_INCLUDE_DIR})
     if (TARGET arrow_shared)
         set(ARROW_SHARED_LIB arrow_shared)
     endif()
