--- a/charts/graphscope-store/values.yaml
+++ b/charts/graphscope-store/values.yaml
@@ -436,6 +436,7 @@ snapshotIncreaseIntervalMs: 1000
 offsetsPersistIntervalMs: 3000
 fileMetaStorePath: "/etc/groot/my.meta"
 logRecycleEnable: true
+logRecycleOffsetReserve: 86400
 
 ## Store Config
 storeDataPath: "/var/lib/graphscope-store"
